	--=:#| Changelog |#:=--

- Assignment 05:

	### NEW ###
	>   Added "Transform" class
	>   Added "GameObject" class
		>   Each GameObject has its own transforms which the renderer uses
		>   Shared meshes among objects
	>   Added global "Renderer" class
	>   Added "Changelog" text file
	>   Added Vsync toggle
	>   Added each GameObject's transform information to "All Current GameObjects Details", including current mesh name
	>   Added 5 GameObjects

	### CHANGES ###
	>   Moved mesh rendering to "Renderer"
	>   Moved Constant Buffer mapping to "Renderer"
	>   Updated "ExternalData" to use a 4x4 transform matrix instead of a Vec3 offset

- Assignment 04:
	
	### NEW ###
	>   Added "Physics" class for later use
	>   Constant Buffer used for 2D transformations
	>   Added 2D Offset to "Debug Information"
	>   Added Tint to "Debug Information"

- Assignment 03:
	
	### NEW ###
	>   Added "Debug Information" header
	>   Added "All Current Mesh Details" header
	>   Added Mesh class
		>   Toggle wireframe added
		>   Toggle mesh added
	>   Added "Shaderhelper" class for later use
	>   Added 3 meshes
	
	### CHANGES ###
	>   Moved debug toggles under "Debug Information"
	

- Assignment 02:

	### NEW ###
	>   Added ImGui interface
	>   Added "Host Details" to "Host Window"
		>   Window client size added
		>   Toggle Demo added
		>   Toggle Debug added
		>   Current FPS histogram added
		>   Current DeltaTime histogram added
		>   Background color picker added

- Assignment 01:
	
	### NEW ###
	>   Added starter code