@@ -6,7 +6,10 @@ Transform::Transform() :
 	position(0, 0, 0),
 	rotation(0, 0, 0),
 	scale(1, 1, 1),
-	dirty(true)
+	matricesDirty(true),
+	up(XMFLOAT3(0,1,0)),
+	right(XMFLOAT3(0, 0, 1)),
+	forward(XMFLOAT3(1, 0, 0))
 {
 	XMStoreFloat4x4(&worldMatrix, XMMatrixIdentity());
 	XMStoreFloat4x4(&worldInverseTransposeMatrix, XMMatrixIdentity());
@@ -40,12 +43,14 @@ void Transform::SetRotation(DirectX::XMFLOAT3 rotation)
 {
 	XMStoreFloat3(&this->rotation, XMVECTOR(XMLoadFloat3(&rotation)));
 	NotifyOfCleanliness(true);
+	UpdateVectors();
 }
 
 void Transform::SetScale(float x, float y, float z)
 {
 	XMStoreFloat3(&scale, XMVectorSet(x, y, z, 0.0f));
 	NotifyOfCleanliness(true);
+	UpdateVectors();
 }
 
 void Transform::SetScale(DirectX::XMFLOAT3 scale)
@@ -68,27 +73,20 @@ void Transform::SetChildTransform(Transform* transform)
 
 void Transform::SetDirty(bool value)
 {
-	dirty = value;
+	matricesDirty = value;
 }
 
-DirectX::XMFLOAT3 Transform::GetPosition()
-{
-	return position;
-}
+DirectX::XMFLOAT3 Transform::GetPosition() { return position; }
+XMFLOAT3 Transform::GetPitchYawRoll() { return rotation; }
+XMFLOAT3 Transform::GetScale() { return scale; }
 
-XMFLOAT3 Transform::GetPitchYawRoll()
-{
-	return rotation;
-}
-
-XMFLOAT3 Transform::GetScale()
-{
-	return scale;
-}
+DirectX::XMFLOAT3 Transform::GetUp() { return up; }
+DirectX::XMFLOAT3 Transform::GetRight() { return right; }
+DirectX::XMFLOAT3 Transform::GetForward() { return forward; }
 
 XMFLOAT4X4 Transform::GetWorldMatrix()
 {
-	if (dirty) {
+	if (matricesDirty) {
 		XMStoreFloat4(&quaternion, XMQuaternionRotationRollPitchYawFromVector(XMLoadFloat3(&rotation)));
 
 		XMMATRIX trMatrix = XMMatrixTranslationFromVector(XMLoadFloat3(&position));
@@ -107,53 +105,55 @@ XMFLOAT4X4 Transform::GetWorldMatrix()
 		XMStoreFloat4x4(&worldMatrix, world);
 		XMStoreFloat4x4(&worldInverseTransposeMatrix, XMMatrixInverse(0, XMMatrixTranspose(world)));
 
-		dirty = false;
+		matricesDirty = false;
 	}
 
 	return worldMatrix;
 }
 
-XMFLOAT4X4 Transform::GetWorldInverseTransposeMatrix()
-{
-	return worldInverseTransposeMatrix;
-}
+XMFLOAT4X4 Transform::GetWorldInverseTransposeMatrix() { return worldInverseTransposeMatrix; }
 
-std::shared_ptr<Transform> Transform::GetParentTransform()
-{
-	return parentTransform;
-}
+std::shared_ptr<Transform> Transform::GetParentTransform() { return parentTransform; }
 
-bool Transform::GetDirty()
-{
-	return dirty;
-}
+bool Transform::GetDirty() { return matricesDirty; }
 
 void Transform::MoveAbsolute(float x, float y, float z)
 {
-	XMStoreFloat3(&position, XMVECTOR(XMLoadFloat3(&position)) + XMVectorSet(x, y, z, 0.0f));
+	XMStoreFloat3(&position, XMLoadFloat3(&position) + XMVectorSet(x, y, z, 0.0f));
 }
 
 void Transform::MoveAbsolute(DirectX::XMFLOAT3 offset)
 {
-	XMStoreFloat3(&position, XMVECTOR(XMLoadFloat3(&position)) + XMVECTOR(XMLoadFloat3(&offset)));
+	XMStoreFloat3(&position, XMLoadFloat3(&position) + XMLoadFloat3(&offset));
 }
 
 void Transform::MoveRelative(float x, float y, float z)
 {
+	XMVECTOR movement = XMVectorSet(x, y, z, 0);
+	XMVECTOR rotQuat = XMLoadFloat4(&quaternion);
+
+	XMVECTOR dir = XMVector3Rotate(movement, rotQuat);
+
+	XMStoreFloat3(&position, XMVECTOR(XMLoadFloat3(&position)) + dir);
+
+	NotifyOfCleanliness(true);
 }
 
 void Transform::MoveRelative(DirectX::XMFLOAT3 offset)
 {
+	MoveRelative(offset.x, offset.y, offset.z);
 }
 
 void Transform::Rotate(float p, float y, float r)
 {
 	XMStoreFloat3(&rotation, XMVectorSet(rotation.x + p, rotation.y + y, rotation.z + r, 0.0f));
+	UpdateVectors();
 }
 
 void Transform::Rotate(DirectX::XMFLOAT3 rotation)
 {
-	XMStoreFloat3(&this->rotation, XMVECTOR(XMLoadFloat3(&this->rotation)) + XMVECTOR(XMLoadFloat3(&rotation)));
+	XMStoreFloat3(&this->rotation, XMLoadFloat3(&this->rotation) + XMLoadFloat3(&rotation));
+	UpdateVectors();
 }
 
 void Transform::Scale(float x, float y, float z)
@@ -163,11 +163,11 @@ void Transform::Scale(float x, float y, float z)
 
 void Transform::Scale(DirectX::XMFLOAT3 scale)
 {
-	XMStoreFloat3(&scale, XMVectorSet(this->scale.x * scale.x, this->scale.y * scale.y, this->scale.z * scale.z, 0.0f));
+	XMStoreFloat3(&this->scale, XMVectorSet(this->scale.x * scale.x, this->scale.y * scale.y, this->scale.z * scale.z, 0.0f));
 }
 
 void Transform::NotifyOfCleanliness(bool success) {
-	dirty = true;
+	matricesDirty = true;
 
 	for (const auto& child : childTransforms) {
 		child->OnClean(success);
@@ -176,5 +176,14 @@ void Transform::NotifyOfCleanliness(bool success) {
 
 void Transform::OnClean(bool success)
 {
-	dirty = success;
+	matricesDirty = success;
+}
+
+void Transform::UpdateVectors()
+{
+	XMVECTOR rotQuat = XMLoadFloat4(&quaternion);
+
+	XMStoreFloat3(&up, XMVector3Rotate(XMLoadFloat3(&up), rotQuat));
+	XMStoreFloat3(&right, XMVector3Rotate(XMLoadFloat3(&right), rotQuat));
+	XMStoreFloat3(&forward, XMVector3Rotate(XMLoadFloat3(&forward), rotQuat));
 }
